<resources>
    <string name="app_name">Todo</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to LOGIN</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="tasks">Tasks</string>
    <string name="email_not_valid">Email is not valid! Email must contains "@".</string>
    <string name="password_not_valid">Password is not valid! Password must be 8 character.</string>
    <string name="check_credentials">Please wait, your credentials are being checked.</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_email">Check your email to reset your password</string>
    <string name="try_again">Try again! Something wrong happened!</string>
    <string name="username_not_valid">Your username is not valid! Username must be 8 character.</string>
    <string name="password_not_match">Password not match!</string>
    <string name="registration">Registration</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search_here">Search here</string>
    <string name="take_photo">Take a photo</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_text">Todo application is a data-based task management application. It allows users to manage their tasks from a smartphone or tablet.You have features such as adding, updating, deleting and marking as done to your list.Keeping track of your tasks all day is easy with Todo\'s mobile app.It helps you easily share to-dos with your friends, family and colleagues.With the Todo application, you can easily manage and access your tasks.</string>
    <string name="privacy_policy_text">Mine built the Todo app as a Free app. This SERVICE is provided by Mine at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Todo unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at todo@gmail.com.</string>
    <string name="select_photo">Select Photo</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_category">Task Category</string>
    <string name="new_task">New Task</string>
    <string name="update">Update</string>
    <string name="update_task">Update Task</string>
    <string name="task_detail">Task Detail</string>
    <string name="all_fields">All Fields Required</string>
    <string name="it_is_time"> It is time!</string>
    <string name="notification">Notification</string>
    <string name="done">Done</string>
    <string name="add_notification">Add Notification</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="location_stop">The location process has been stopped.</string>
    <string name="location_start">The location process has been started.</string>
    <string name="coordinates">Coordinates</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="get_time">Get Time</string>
    <string name="message">Message</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="notification_set_to">Notification set to</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_delete_task">Are you sure you want to delete task ?</string>
    <string name="task_done">Tasks Done</string>
    <string name="task_not_added">Task not added!</string>
    <string name="task_added_successfully">Task added successfully</string>
    <string name="failed_delete">Failed To Delete!</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="failed">"Failed</string>
    <string name="permission_for_gallery">You must give permission for the gallery.</string>
    <string name="share_via">Share via:</string>

</resources>