<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/home"


            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_about"
            android:title="@string/about"

            />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_baseline_privacy"
            android:title="@string/privacy_policy"

            />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_baseline_access_alarm"
            android:title="@string/notification"

            />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_baseline_location_on"
            android:title="@string/location"

            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_nav"
            android:title="@string/logout"

            />
    </group>
</menu>