<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity"
    android:background="@color/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/start_service" />


    <Button
        android:id="@+id/stopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/stop_service" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/startService"
        android:layout_alignTop="@id/startService"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foregroundGravity="top|right">

        <TextView
            android:id="@+id/textViewCoordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/coordinates"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </ScrollView>


</RelativeLayout>